trying to fix styling on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -117,19 +117,19 @@ h4, h3, h2, .work-time, .work-description, .job-title {
     margin: 0 auto;
 }
 
-.tech-skills-1, .tech-skills-2, .tech-skills-3, .work-experience, .main-carousel,
-.skill-section, .education-section, .colleges-1, .colleges-2, .people-say, .review-pics,
-.review, .projects, .project-1, .project-2, .interests-hobbies, .hobbies, .second-pic-wp,
-.about-me-text {
+.second-pic-wp, .about-me-text, .buttons, .skill-section, .tech-skills-1,
+.tech-skills-2, .tech-skills-3, .work-experience, .carousel-one,
+.education-section, .colleges, .people-saw, .carousel-two, .projects-header,
+.projects, .interests-hobbies, .hobbies, .people-say{
     opacity: 0;
 }
 
-.tech-skills-1.animated, .tech-skills-2.animated, .tech-skills-3.animated, 
-.work-experience.animated, .main-carousel.animated, .skill-section.animated,
-.education-section.animated, .colleges-1.animated, .colleges-2.animated, 
-.people-say.animated, .review-pics.animated, .review.animated, .projects.animated,
-.project-1.animated, .project-2.animated, .interests-hobbies.animated, .hobbies.animated,
-.second-pic-wp.animated, .about-me-text.animated, .buttons.animated {
+.second-pic-wp.animated, .about-me-text.animated, .buttons.animated,
+.skill-section.animated, .tech-skills-1.animated,
+.tech-skills-2.animated, .tech-skills-3.animated, .work-experience.animated, 
+.carousel-one.animated, .education-section.animated, .colleges.animated,
+.people-saw.animated, .carousel-two.animated, .projects-header.animated,
+.projects.animated, .interests-hobbies.animated, .hobbies.animated, .people-say.animated {
     opacity: 1;
 }
 
